update jupyter notebooks

--- a/Data-Stats.ipynb
+++ b/Data-Stats.ipynb
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "9fba00c7",
    "metadata": {},
    "outputs": [],
@@ -1550,10 +1550,12 @@
     "def sample_YouTubeCommons(required_word_count):    \n",
     "    # Load the dataset using Dask\n",
     "    dataset = dd.read_parquet('/shared/3/datasets/YouTube-Commons')\n",
+    "     print(f\"Dataset loaded\")\n",
     "\n",
     "    # Filter the dataset where both transcription_language and original_language are 'en'\n",
     "    filtered_dataset = dataset[(dataset['transcription_language'] == 'en') & (dataset['original_language'] == 'en')]\n",
-    "\n",
+    "    print(f\"Dataset filtered\")\n",
+    "    \n",
     "    # Debugging step: Check the number of rows after filtering\n",
     "    filtered_count = filtered_dataset.shape[0].compute()\n",
     "    print(f\"Number of rows after filtering: {filtered_count}\")\n",
@@ -1595,10 +1597,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "788965c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows after filtering: 1489377\n",
+      "{'id': ['UJiOpInAP4U'], 'domain': ['YouTubeCommons'], 'source': ['YouTubeCommons'], 'text': [\"tonight live from the scullery theater from the impersonator capital of the world in the heart of downtown las vegas we present the downtown podcast starring your host mr tonight's guest from rat pack las vegas peter pavone and from real gaming lawrence vaughn and now ladies and gentlemen gentlemen let's give it up for the man who doesn't mean jerry seinfeld thank you thank you guys oh that was good yeah jerry scifield you already knew jerry what's to do with all the sniffles we're doing a podcast it's not a late night show we got late night show here we got a podcast here it's the audio it's a radio what is it what's the dude i don't know sorry all right i tried it tried we have an impersonator on tonight and i wanted to impress him i don't think i did nope doesn't look impressed okay so my favorite thing happened this last week uh there was a flight from london to dubai that had to make an emergency stop turn around and go back because there was something very strong coming from the bathroom uh if there's any better story then my wife took a which of the bathroom so bad that we had to turn around an entire flight i mean that's funny right whatever no uh now now going through customs are gonna be like did you bring anything from out of the country did you have curry or something i don't know yeah oh yeah yeah yeah yeah well you know have you ever had that happen where you had to go in the bathroom and they're like we got to stop what we're doing because of what lenny did no not yet not yet okay good i like that i like that okay it's reported that floyd mayweather spends four thousand dollars a day on food and that's just for the gluten-free bread at whole foods speaking of which hit manny last time we talked last time i was on here i said put me in your entourage i haven't heard back come on we're huge in the philippines you're huge in the philippines kinda with my help i can make you a big star put me put me back in there put me back in okay yeah so um so a couple made their wedding cake look exactly like a nintendo console isn't that crazy isn't that weird yeah uh for their their wedding gifts were seven wedgies and they were stuffed in the locker 12 times actually they didn't get married yet they didn't get married yet because the bride was kidnapped by bowser we tried remember when dylan said we worked for free this is why yeah um so do you guys you guys look on kickstarter indiegogo anything like that you guys look those things up i found a i found a company that's starting in indigo next week that creates personal flame throwers personal flamethrowers for your everyday use of melting snow starting world war three and uh and you know creating another political debate you want gun control now we have flame thrower control so we're going to have the constitution we're going to have battles for it it's going to be great look for it later next week flamethrowers 700 if you got it let's go we do this yeah okay um for this for this next joke i was really tired actually these all these jokes are really tired as you can tell are not doing too well uh i try to say the person's name in my siri and instead it just said benjamin net and yahoo so that's the prime minister of israel is president netanyahu netanyahu was re-elected as prime minister of israel this last week a lot of netanyahu fans out there okay yeah full supporters uh obama is not is one of you guys not a very good not a good friend of netanyahu but since they're allies he had to make a phone call to congratulate him and uh it's kind of like when your mom makes you become friends with the neighbor that you don't like but because your neighbors you got to call me and say hey good job and whatever you did um i'm here you're here we got to be friends my mom's making you making me call you to say congratulations but i want you to know i still hate you foreign relations sorry starbucks began a new campaign this week called hashtag race together where baristas are supposed to start up conversations with customers on how we can fix inequality race issues this campaign was inspired by taco bell's hashtag race together to the bathroom campaign i don't know how i'm supposed to have an intellectual conversation with a guy who can't spell trey correctly tree i was wondering i was thinking maybe if we looked at the color of the human and not the color of the person maybe we can solve world hungry i don't know if you guys had tad as a barista but that's what he said to me yeah whatever and finally um finally thank goodness actually i got 20 more you guys ready for this we're going to do it all right finally finally that's good thanks thanks dad finally a man dressed as darth vader robbed a bank in north carolina this last week yeah is that right yeah uh-huh uh he was caught because his mom was late get with the getaway car because he's whatever we got a great show for you guys tonight\"]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Example usage\n",
     "try:\n",
@@ -1609,9 +1620,247 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46fa142a",
+   "metadata": {},
+   "source": [
+    "### s2orc sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9db5dc4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2723164150.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def sample_s2orc(required_word_count):\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import random\n",
+    "\n",
+    "s2orc_path = \"/shared/3/projects/citation-context/s2orc/s2orc\"\n",
+    "\n",
+    "def count_words(text):\n",
+    "    return len(text.split())\n",
+    "\n",
+    "def read_files_and_sample(path, target_word_count):\n",
+    "    word_count = 0\n",
+    "    sampled_ids = []\n",
+    "    sampled_texts = []\n",
+    "    \n",
+    "    files = [os.path.join(path, f) for f in os.listdir(path) if f.startswith('s2orc_')]\n",
+    "    num_files = len(files)\n",
+    "    words_per_file = target_word_count // num_files\n",
+    "    \n",
+    "    for file_path in files:\n",
+    "        with open(file_path, 'r') as f:\n",
+    "            lines = f.readlines()\n",
+    "            total_lines = len(lines)\n",
+    "            random_indices = random.sample(range(total_lines), total_lines)  # Shuffle the line indices\n",
+    "            \n",
+    "            for idx in random_indices:\n",
+    "                if word_count >= target_word_count:\n",
+    "                    break\n",
+    "                \n",
+    "                line = json.loads(lines[idx])\n",
+    "                corpusid = line.get('corpusid')\n",
+    "                text = line.get('content', {}).get('text', \"\")\n",
+    "                words = text.split()\n",
+    "                \n",
+    "                if word_count + len(words) > target_word_count:\n",
+    "                    remaining_words = target_word_count - word_count\n",
+    "                    sampled_texts.append(\" \".join(words[:remaining_words]))\n",
+    "                    sampled_ids.append(corpusid)\n",
+    "                    word_count += remaining_words\n",
+    "                    break\n",
+    "                else:\n",
+    "                    sampled_texts.append(text)\n",
+    "                    sampled_ids.append(corpusid)\n",
+    "                    word_count += len(words)\n",
+    "                \n",
+    "                if word_count >= words_per_file * (files.index(file_path) + 1):\n",
+    "                    break\n",
+    "\n",
+    "        if word_count >= target_word_count:\n",
+    "            break\n",
+    "\n",
+    "    return sampled_ids, sampled_texts\n",
+    "\n",
+    "def sample_s2orc(required_word_count):\n",
+    "    sampled_ids, sampled_texts = read_files_and_sample(s2orc_path, required_word_count)\n",
+    "    return {\n",
+    "        \"id\": sampled_ids,\n",
+    "        \"domain\": [\"s2orc\"] * len(sampled_texts),\n",
+    "        \"source\": [\"s2orc\"] * len(sampled_texts),\n",
+    "        \"text\": sampled_texts,\n",
+    "    }\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113892f4",
+   "id": "c0bac8b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampled_data = sample_s2orc(10)\n",
+    "print(sampled_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a340ecad",
+   "metadata": {},
+   "source": [
+    "## Stats on fitting corpora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "768a67d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "99830938f3bd4c5ea752c3253438733a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading dataset from disk:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from datasets import load_from_disk\n",
+    "\n",
+    "# Load the dataset from the specified path with train/dev/test splits\n",
+    "dataset_path = \"/shared/3/projects/hiatus/TOKENIZER_wegmann/data/fitting-corpora/wikipedia\"\n",
+    "dataset = load_from_disk(dataset_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "49b19ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = dataset['train']\n",
+    "dev_dataset = dataset['dev']\n",
+    "test_dataset = dataset['test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "622dca92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train word count: 1469999792\n",
+      "Dev word count: 15000029\n",
+      "Test word count: 15000087\n"
+     ]
+    }
+   ],
+   "source": [
+    "    print(f\"Train word count: {sum(train_dataset['word_count'])}\")\n",
+    "    print(f\"Dev word count: {sum(dev_dataset['word_count'])}\")\n",
+    "    print(f\"Test word count: {sum(test_dataset['word_count'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c054eae4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"domain\" in train_dataset[0]:\n",
+    "    for split in [train_dataset, dev_dataset, test_dataset]:\n",
+    "        domain_word_count = {}\n",
+    "        for domain, word_count in zip(split[\"domain\"], split[\"word_count\"]):\n",
+    "            if domain not in domain_word_count:\n",
+    "                domain_word_count[domain] = 0\n",
+    "            domain_word_count[domain] += word_count\n",
+    "        print(f\"Domain word count distribution for {split}: {domain_word_count}\")\n",
+    "\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "156521a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_words(text):\n",
+    "    return len(text.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "75403582",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "EOFError",
+     "evalue": "Compressed file ended before the end-of-stream marker was reached",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m total_word_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m bz2\u001b[38;5;241m.\u001b[39mopen(file_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrt\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m----> 7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n\u001b[1;32m      8\u001b[0m         tweet \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(line)\n\u001b[1;32m      9\u001b[0m         text \u001b[38;5;241m=\u001b[39m tweet\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda/lib/python3.11/bz2.py:176\u001b[0m, in \u001b[0;36mBZ2File.read1\u001b[0;34m(self, size)\u001b[0m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m size \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    175\u001b[0m     size \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mDEFAULT_BUFFER_SIZE\n\u001b[0;32m--> 176\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_buffer\u001b[38;5;241m.\u001b[39mread1(size)\n",
+      "File \u001b[0;32m/opt/anaconda/lib/python3.11/_compression.py:68\u001b[0m, in \u001b[0;36mDecompressReader.readinto\u001b[0;34m(self, b)\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreadinto\u001b[39m(\u001b[38;5;28mself\u001b[39m, b):\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mmemoryview\u001b[39m(b) \u001b[38;5;28;01mas\u001b[39;00m view, view\u001b[38;5;241m.\u001b[39mcast(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m byte_view:\n\u001b[0;32m---> 68\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;28mlen\u001b[39m(byte_view))\n\u001b[1;32m     69\u001b[0m         byte_view[:\u001b[38;5;28mlen\u001b[39m(data)] \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m     70\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data)\n",
+      "File \u001b[0;32m/opt/anaconda/lib/python3.11/_compression.py:99\u001b[0m, in \u001b[0;36mDecompressReader.read\u001b[0;34m(self, size)\u001b[0m\n\u001b[1;32m     97\u001b[0m     rawblock \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fp\u001b[38;5;241m.\u001b[39mread(BUFFER_SIZE)\n\u001b[1;32m     98\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m rawblock:\n\u001b[0;32m---> 99\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mEOFError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCompressed file ended before the \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    100\u001b[0m                        \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mend-of-stream marker was reached\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    101\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    102\u001b[0m     rawblock \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mEOFError\u001b[0m: Compressed file ended before the end-of-stream marker was reached"
+     ]
+    }
+   ],
+   "source": [
+    "import bz2\n",
+    "import json\n",
+    "data = []\n",
+    "file_path = '/nfs/locker/twitter-decahose-locker/2021/decahose.2021-05-18.p2.bz2'\n",
+    "total_word_count = 0\n",
+    "with bz2.open(file_path, 'rt') as file:\n",
+    "    for line in file:\n",
+    "        tweet = json.loads(line)\n",
+    "        text = tweet.get(\"text\", \"\")\n",
+    "        tweet_id = tweet.get(\"id\", \"\")\n",
+    "        word_count = count_words(text)\n",
+    "        data.append({\"id\": tweet_id, \"text\": text, \"word_count\": word_count})\n",
+    "        total_word_count += word_count\n",
+    "        if total_word_count > 3000000:\n",
+    "            break\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b342531b",
    "metadata": {},
    "outputs": [],
    "source": []
