fit pre-tokenizer

--- a/Pre_Tokenizers.ipynb
+++ b/Pre_Tokenizers.ipynb
@@ -10,9 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "17db76bc",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T15:12:50.113966Z",
+     "start_time": "2024-12-05T15:12:50.110171Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -24,8 +29,8 @@
     }
    ],
    "source": [
-    "from tokenizers.pre_tokenizers import Split\n",
     "from tokenizers import Regex\n",
+    "from tokenizers.pre_tokenizers import ByteLevel, Sequence, Split\n",
     "\n",
     "# create regex for \\s\n",
     "ws_re = Regex(r'\\s+')\n",
@@ -39,9 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "31c49473",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T15:12:54.937355Z",
+     "start_time": "2024-12-05T15:12:54.934296Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
