--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 165,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -621,19 +621,19 @@
     "        rows.append({\n",
     "            \"premise\": premise,\n",
     "            \"hypothesis\": hypothesis,\n",
-    "            \"label\": label, # 0 entailment, 1 neutral, 2 contradiction\n",
+    "            \"nli\": label, # 0 entailment, 1 neutral, 2 contradiction\n",
     "            \"style\": style # 0 distinct, 1 similar\n",
     "        })\n",
     "\n",
-    "    df = pd.DataFrame(rows, columns=[\"premise\", \"hypothesis\", \"label\", \"style\"])\n",
+    "    df = pd.DataFrame(rows, columns=[\"premise\", \"hypothesis\", \"nli\", \"style\"])\n",
     "    output_file = f\"snli_modified/{split}_modified.csv\"\n",
     "    df.to_csv(output_file, index=False, encoding='utf-8')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:55:26.399309Z",
-     "start_time": "2024-12-10T10:54:30.352575Z"
+     "end_time": "2024-12-10T12:22:18.555695Z",
+     "start_time": "2024-12-10T12:21:22.420638Z"
     }
    },
    "id": "498d9a270007d867"
