--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 166,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -595,6 +595,10 @@
     "        premise = example[\"premise\"]\n",
     "        hypothesis = example[\"hypothesis\"]\n",
     "        label = example[\"label\"]\n",
+    "        \n",
+    "        # make sure that text is not empty\n",
+    "        if not premise or not hypothesis:\n",
+    "            continue\n",
     "\n",
     "        # Skip if label is not in {0, 1, 2}\n",
     "        if label not in {0, 1, 2}:\n",
@@ -626,14 +630,14 @@
     "        })\n",
     "\n",
     "    df = pd.DataFrame(rows, columns=[\"premise\", \"hypothesis\", \"nli\", \"style\"])\n",
-    "    output_file = f\"snli_modified/{split}_modified.csv\"\n",
-    "    df.to_csv(output_file, index=False, encoding='utf-8')"
+    "    output_file = f\"snli_modified/{split}_modified.tsv\"\n",
+    "    df.to_csv(output_file, index=False, encoding='utf-8', sep=\"\\t\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T12:22:18.555695Z",
-     "start_time": "2024-12-10T12:21:22.420638Z"
+     "end_time": "2024-12-10T12:37:09.453978Z",
+     "start_time": "2024-12-10T12:36:12.635330Z"
     }
    },
    "id": "498d9a270007d867"
