wrong textflint code

--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -651,6 +651,86 @@
     "collapsed": false
    },
    "id": "5e5b745063e02459"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "92e73a3a143eb934"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "801e82992da35a7c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[34;1mTextFlint\u001B[0m: Downloading http://textflint.oss-cn-beijing.aliyuncs.com/download/NLTK_DATA/wordnet/wordnet.zip.\n",
+      "100%|██████████| 10.8M/10.8M [00:01<00:00, 5.97MB/s]\n",
+      "\u001B[34;1mTextFlint\u001B[0m: Unzipping file /Users/anna/.cache/textflint/tmp3a_4wsdp to /Users/anna/.cache/textflint/NLTK_DATA/wordnet.\n",
+      "\u001B[34;1mTextFlint\u001B[0m: Successfully saved NLTK_DATA/wordnet/wordnet.zip to cache.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'textflint.transformation'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mtextflint\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mtransformation\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01muniversal\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mchar_typos\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m CharTypos\n\u001B[1;32m      3\u001B[0m original_text \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mThis is a sample sentence.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m      4\u001B[0m transformer \u001B[38;5;241m=\u001B[39m CharTypos()\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'textflint.transformation'"
+     ]
+    }
+   ],
+   "source": [
+    "from textflint.transformation.universal.char_typos import CharTypos\n",
+    "\n",
+    "original_text = \"This is a sample sentence.\"\n",
+    "transformer = CharTypos()\n",
+    "\n",
+    "# The transform() method expects a list of strings and returns a list of variants.\n",
+    "perturbed_variants = transformer.transform([original_text])\n",
+    "\n",
+    "print(\"Original Text:\")\n",
+    "print(original_text)\n",
+    "print(\"\\nPerturbed Variants:\")\n",
+    "for i, variant in enumerate(perturbed_variants, start=1):\n",
+    "    print(f\"{i}. {variant}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-12-10T14:55:58.415312Z",
+     "start_time": "2024-12-10T14:55:51.601173Z"
+    }
+   },
+   "id": "1c4b2554e575481e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9844f73f784247d"
   }
  ],
  "metadata": {
