SNLI: run also on original task

--- a/src/NLI-vs-Style-Similarity.ipynb
+++ b/src/NLI-vs-Style-Similarity.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-10T09:35:43.047855Z",
-     "start_time": "2024-12-10T09:35:35.690007Z"
+     "end_time": "2024-12-11T10:51:08.886604Z",
+     "start_time": "2024-12-11T10:51:01.891858Z"
     }
    },
    "outputs": [],
@@ -41,15 +41,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T09:35:46.480345Z",
-     "start_time": "2024-12-10T09:35:46.470Z"
+     "end_time": "2024-12-11T10:51:08.902086Z",
+     "start_time": "2024-12-11T10:51:08.887468Z"
     }
    },
    "id": "1111efc1a74c64b2"
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import re\n",
@@ -169,15 +169,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:52:09.684563Z",
-     "start_time": "2024-12-10T10:52:09.680765Z"
+     "end_time": "2024-12-11T10:51:08.902197Z",
+     "start_time": "2024-12-11T10:51:08.892834Z"
     }
    },
    "id": "1fee0ccf675459f4"
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def compare_texts(text1, text2):\n",
@@ -262,15 +262,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:52:10.078577Z",
-     "start_time": "2024-12-10T10:52:10.076088Z"
+     "end_time": "2024-12-11T10:51:08.905636Z",
+     "start_time": "2024-12-11T10:51:08.898476Z"
     }
    },
    "id": "3dd4afabfbbafb88"
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import random\n",
@@ -440,15 +440,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:52:10.374403Z",
-     "start_time": "2024-12-10T10:52:10.370458Z"
+     "end_time": "2024-12-11T10:51:08.928134Z",
+     "start_time": "2024-12-11T10:51:08.909175Z"
     }
    },
    "id": "15964367d2573682"
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -467,15 +467,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:52:10.710574Z",
-     "start_time": "2024-12-10T10:52:10.707517Z"
+     "end_time": "2024-12-11T10:51:08.938443Z",
+     "start_time": "2024-12-11T10:51:08.911168Z"
     }
    },
    "id": "7ed8d149c3e0256"
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -494,23 +494,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:52:12.869274Z",
-     "start_time": "2024-12-10T10:52:12.861014Z"
+     "end_time": "2024-12-11T10:51:08.938841Z",
+     "start_time": "2024-12-11T10:51:08.913535Z"
     }
    },
    "id": "53603be18299f695"
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Similarity score: 0.75\n",
-      "Synthesized text: Men are working on John Deere equipment.\n",
-      "Similarity score: 1.0\n"
+      "Synthesized text: Men are working on John Deere equipment.\n",
+      "Similarity score: 0.875\n"
      ]
     }
    ],
@@ -527,23 +527,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:52:30.329530Z",
-     "start_time": "2024-12-10T10:52:30.325810Z"
+     "end_time": "2024-12-11T10:51:08.938980Z",
+     "start_time": "2024-12-11T10:51:08.915891Z"
     }
    },
    "id": "60acb039abe67d71"
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Similarity score: 1.0\n",
-      "Synthesized text: \"There is a party\"\n",
-      "Similarity score: 0.75\n"
+      "Synthesized text: there is a party\n",
+      "Similarity score: 0.875\n"
      ]
     }
    ],
@@ -560,8 +560,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T10:52:36.397729Z",
-     "start_time": "2024-12-10T10:52:36.393678Z"
+     "end_time": "2024-12-11T10:51:08.939140Z",
+     "start_time": "2024-12-11T10:51:08.918056Z"
     }
    },
    "id": "95956ea770054e1"
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -625,19 +625,21 @@
     "        rows.append({\n",
     "            \"premise\": premise,\n",
     "            \"hypothesis\": hypothesis,\n",
+    "            \"premise_original\": example[\"premise\"],\n",
+    "            \"hypothesis_original\": example[\"hypothesis\"],\n",
     "            \"nli\": label, # 0 entailment, 1 neutral, 2 contradiction\n",
     "            \"style\": style # 0 distinct, 1 similar\n",
     "        })\n",
     "\n",
-    "    df = pd.DataFrame(rows, columns=[\"premise\", \"hypothesis\", \"nli\", \"style\"])\n",
+    "    df = pd.DataFrame(rows, columns=[\"premise\", \"hypothesis\", \"premise_original\", \"hypothesis_original\", \"nli\", \"style\"])\n",
     "    output_file = f\"snli_modified/{split}_modified.tsv\"\n",
     "    df.to_csv(output_file, index=False, encoding='utf-8', sep=\"\\t\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-12-10T12:37:09.453978Z",
-     "start_time": "2024-12-10T12:36:12.635330Z"
+     "end_time": "2024-12-11T10:52:06.862266Z",
+     "start_time": "2024-12-11T10:51:08.921386Z"
     }
    },
    "id": "498d9a270007d867"
